k8s/clickhouse.yml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      targetPort: 8123
    - name: tcp
      port: 9000
      targetPort: 9000
  selector:
    app: clickhouse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clickhouse
  template:
    metadata:
      labels:
        app: clickhouse
    spec:
      containers:
        - name: clickhouse
          image: clickhouse/clickhouse-server
          ports:
            - containerPort: 8123
            - containerPort: 9000
          volumeMounts:
            - name: clickhouse-storage
              mountPath: /var/lib/clickhouse
      volumes:
        - name: clickhouse-storage
          persistentVolumeClaim:
            claimName: clickhouse-pvc
